исправил замечания по ТЗ_9